<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/linearLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/walter_white_vertical"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/show_msg"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:text="@string/show_msg_label"
        android:textAlignment="center"
        android:textColor="#00B8D4"
        android:textSize="28sp" />

    <TextView
        android:id="@+id/show_hint"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:text="@string/show_hint_label"
        android:textAlignment="center"
        android:textColor="#64DD17"
        android:textSize="24sp" />

    <TextView
        android:id="@+id/show_attempts_left"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/show_attempts_left_label"
        android:textColor="#B0BEC5"
        android:textSize="18sp" />

    <EditText
        android:id="@+id/edit_num"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/et_edit_num_label"
        android:inputType="number"
        android:maxLength="2"
        android:minHeight="48dp"
        android:textColorHint="#FFEBEE" />

    <Button
        android:id="@+id/btn_guess"
        android:layout_width="match_parent"
        android:layout_height="62dp"
        android:text="@string/btn_guess_label" />

    <Button
        android:id="@+id/btn_restart"
        android:layout_width="match_parent"
        android:layout_height="62dp"
        android:layout_gravity="top"
        android:text="@string/btn_restart_label" />

</LinearLayout>
